@@ -5,20 +5,21 @@ import io.redspace.ironsspellbooks.entity.spells.EarthquakeAoe;
 import io.redspace.ironsspellbooks.network.ClientboundSyncCameraShake;
 import io.redspace.ironsspellbooks.setup.Messages;
 import net.minecraft.client.Minecraft;
-import net.minecraft.server.level.ServerLevel;
+import net.minecraft.entity.Entity;
+import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.entity.player.ServerPlayerEntity;
 import net.minecraft.util.math.MathHelper;
 import net.minecraft.util.math.vector.Vector3d;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.client.event.ViewportEvent;
-import net.minecraftforge.event.TickEvent;
+import net.minecraftforge.client.event.EntityViewRenderEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.LogicalSide;
 import net.minecraftforge.fml.common.Mod;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 //TODO: make IManager and shit
 @Mod.EventBusSubscriber
@@ -65,19 +66,20 @@ public class CameraShakeManager {
         Messages.sendToPlayer(new ClientboundSyncCameraShake(cameraShakeData), player);
     }
 
+    // Instead of ComputeCameraAngles, ForgeHooksClient.onCameraSetup used to call CameraSetup
     @SubscribeEvent
     @OnlyIn(Dist.CLIENT)
-    public static void handleCameraShake(ViewportEvent.ComputeCameraAngles event) {
+    public static void handleCameraShake(EntityViewRenderEvent.CameraSetup event) {
         if (clientCameraShakeData.isEmpty()) {
             return;
         }
 
-        var player = event.getCamera().getEntity();
-        List<CameraShakeData> closestPositions = clientCameraShakeData.stream().sorted((o1, o2) -> (int) (o1.origin.distanceToSqr(player.position()) - o2.origin.distanceToSqr(player.position()))).toList();
+        Entity player = Minecraft.getInstance().getCameraEntity();
+        List<CameraShakeData> closestPositions = clientCameraShakeData.stream().sorted((o1, o2) -> (int) (o1.origin.distanceToSqr(player.position()) - o2.origin.distanceToSqr(player.position()))).collect(Collectors.toList());
         Vector3d closestPos = closestPositions.get(0).origin;
         //.0039f is 1/15^2
         float intensity = (float) MathHelper.clampedLerp(1, 0, closestPos.distanceToSqr(player.position()) * 0.0039f);
-        float f = (float) (player.tickCount + event.getPartialTick());
+        float f = (float) (player.tickCount + event.getRenderPartialTicks());
         float yaw = MathHelper.cos(f * 1.5f) * intensity * .35f;
         float pitch = MathHelper.cos(f * 2f) * intensity * .35f;
         float roll = MathHelper.sin(f * 2.2f) * intensity * .35f;
